# portal_cpp_kamera

./: .gitignore  CMakeCache.txt  CMakeLists.txt  communication.cpp  communication.h  data  data.txt~  declarations.cpp  declarations.h  easywsclient.cpp  kalmanCont.cpp  kalmanCont.h  loaded_data.cpp  loaded_data.h  main.cpp  opencv.cpp  opencv.h  portals  test.txt
